2005-03-10  Derek Price  <derek@ximbiot.com>

	* diff.c (diff_fileproc): Remove unnecessary check for NULL.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* commit.c: Gratuitous reformatting.
	* entries.c: Ditto.
	* import.c (import, import_descend): Ditto.

	* commit.c (commit): Use xnmalloc. Gratuitous reformatting.
	* history.c (save_user, save_file, save_module, read_hrecs): Ditto.
	* ignore.c (ign_add): Ditto.

	* hardlink.c (lookup_file_by_inode): Use Xasprintf instead of
	xmalloc/sprintf.  Gratuitous reformatting.
	(update_hardlink_info, list_linked_files_on_disk): Ditto.
	(find_checkedout_proc): Ditto.
	* history.c (history, history_write, save_file): Ditto.
	(select_hrec): Ditto. 
	* ignore.c (ign_setup, ignore_files): Ditto.
	* import.c (process_import_file, import_descend_dir): Ditto.

	* import.c (import_descend_dir): Use Xasprintf instead of
	xmalloc/strcpy+strcat+strcat.

	* history.c (read_hrecs): Make function argument a const.
	
2005-03-10  Derek Price  <derek@ximbiot.com>

	* fileattr.c (fileattr_read): Only eat a newline when it really is a
	newline.

2005-03-10  Mark D. Baushke  <mdb@cvshome.org>

	* zlib.c: Include "pagealign_alloc.h".

2005-03-09  Derek Price  <derek@ximbiot.com>

	* add.c (add, add_directory), buffer.c (allocate_buffer_datas),
	client.c (update_entries), commit.c (checkaddfile), entries.c
	(Entries_Open), fileattr.c (fileattr_read), ignore.c (ign_add),
	import.c (import), main.c (main), parseinfo.c (parse_config), rcs.c
	(RCS_reparsercsfile, RCS_getbranchpoint, RCS_checkout,
	RCS_delete_revs, apply_rcs_changes): Avoid memory leaks.
	(Thanks to report from Alen Zukich <alen.zukich@klocwork.com>.)

	* hardlink.c, hardlink.h: Avoid compiling entire contents of these
	files w/o preserve permissions support.

2005-03-09  Mark D. Baushke  <mdb@cvshome.org>

	* history.c (history, save_file): Cleanup the API to match the
	comments.

2005-03-08  Derek Price  <derek@ximbiot.com>
